networkpolicy/intersvc.yml
apiVersion: v1
kind: Service
metadata:
   name: internal-svc
   namespace: default
spec:
  ports:
  - nodePort: 30082
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    name: internal
  type: NodePort
