networkpolicy/payrollsvc.yml
apiVersion: v1
kind: Service
metadata:
   name: payroll-svc
   namespace: default
spec:
  ports:
  - nodePort: 30083
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    name: payroll
  type: NodePort
