networkpolicy/egresspolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: external-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      name: external
  ingress:
  - from:
    - podSelector:
        matchLabels:
          name: payroll
    ports:
    - protocol: TCP
      port: 8080
