networkpolicy/networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: payroll-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      name: payroll
  ingress:
  - from:
    - podSelector:
        matchLabels:
          name: internal 
    ports:
    - protocol: TCP
      port: 8080
